<resources>
    <string name="app_name">Reken op me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Themas">Thema\'s</string>

    <!-- For home -->
    <string name="solden">Solden berekenen</string>
    <string name="wisselgeld">Wisselgeld berekenen</string>
    <string name="geldTellen">Geld tellen</string>
    <string name="tijdBerekenen">Tijd berekenen</string>
    <string name="datumsBerekenen">Datums berekenen</string>
    <string name="gewichtOmzetten">Gewicht Omzetten</string>
    <string name="volumeOmzetten">Inhoud omzetten</string>
    <string name="afstandenOmzetten">Afstanden omzetten</string>

    <!-- For weight -->
    <string name="maateenheid">maateenheid:</string>
    <string name="hoeveelheid">hoeveelheid:</string>
    <string name="mg"> mg</string>
    <string name="g"> g</string>
    <string name="kg"> kg</string>
    <string name="ton"> ton</string>

    <!-- For Volume -->
    <string name="ml"> ml</string>
    <string name="cl"> cl</string>
    <string name="dl"> dl</string>
    <string name="l"> l</string>

    <!-- For Time -->
    <string name="beginTime">Begintijd</string>
    <string name="endTime">Eindtijd</string>

    <!-- For Gewicht -->
    <string name="mm"> mm</string>
    <string name="cm"> cm</string>
    <string name="dm"> dm</string>
    <string name="m"> m</string>
    <string name="km"> km</string>

    <!-- For Themes -->
    <string name="zwartwit">Zwart wit thema</string>
    <string name="pastel">Pastel thema</string>
    <string name="defaultTheme">Standaard thema</string>

    <!-- For options on main activity-->
    <string name="about">About</string>
    <string name="spraak">Spraak</string>
    <string name="spraakToggle">Spraak</string>
    <string name="namen">Developers:\nPieter-jan Dergent &amp; Zento De Houwer\n2017</string>
    <string name="uitleg">Dit is een app om personen met dyscalculie te helpen door dagelijkse berekeningen te vergemakkelijken\nGemaakt in opdracht van Thomas More Geel - ITFactory - App development in samenwerking met Thomas More Antwerpen - Logopedie.</string>
    <string name ="contact">Voor eventuele vragen of om bugs te rapporteren, mail ons gerust op het volgende mailadres:</string>
    <string name="mail">ZentoDeHouwer@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
