<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button android:id="@+id/defaultTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/defaultTheme"
        android:onClick="onClickButtonThemes"
        android:background="@color/colorPrimary"
        android:textColor="@color/ColorWit" />

    <Button android:id="@+id/zwartwit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/zwartwit"
        android:onClick="onClickButtonThemes"
        android:background="@color/ColorZwart"
        android:textColor="@color/ColorWit"/>

    <Button android:id="@+id/pastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pastel"
        android:onClick="onClickButtonThemes"
        android:background="@color/blauwPastel"
        android:textColor="@color/ColorWit"/>

</LinearLayout>