<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.thomasmore.dyscalculie.GewichtOmzettenFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoeveelheid"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/origineleHoeveelheid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                />

            <Spinner
                android:id="@+id/dropDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/mmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/mmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mm"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/cmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/cmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/dmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/dmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dm"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/mText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/mLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/kmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/kmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:gravity="center"/>
        </LinearLayout>



    </LinearLayout>
</FrameLayout>
