<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.thomasmore.dyscalculie.VolumeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoeveelheid"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/origineleHoeveelheid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                />

            <Spinner
                android:id="@+id/dropDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/mlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/mlLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ml"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/clText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/clLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cl"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/dlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/dlLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dl"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/lText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <TextView
                android:id="@+id/lLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
